1999-10-06  Russell Steinthal  <rms39@columbia.edu>

	* esdlib.c (esd_connect_tcpip): Fix case in which user specifies
	only a port number (first character of host is :)

1999-09-20  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in (nanosleep): Look also in -lrt.
	Suggested by Drazen Kacar <dave@srce.hr>.

1999-09-03  Yo Ric Dude  <ericmit@ix.netcom.com>

	* audio_alsa.c: evil macro hacks to map the new alsa names, 
	SND_PCM_OPEN_CAPTURE and snd_pcm_capture_format, to the old names, 
	SND_PCM_OPEN_RECORD and snd_pcm_record_format.  Why alsa doesn't
	do this itself...

	* esdlib.c: (esd_open_sound): if no ESPEAKER is set, but DISPLAY
 	is, try to connect to the default port on that host. Thanks to
 	Charles Galambos <ees1cg@ee.surrey.ac.uk>.

1999-08-20  Elliot Lee  <sopwith@redhat.com>
	* *.c, esd-server.h: Fix warnings, bump version to 0.2.13.

1999-08-19  Kjartan Maraas  <kmaraas@online.no>

	* mix.c: (clip_mix_to_output_8u): Change *output to unsigned int
	from signed int.
	
Sun Aug  8 00:56:41 1999 1999 Timur Bakeyev <mc@bat.ru>

	* configure.in: Add bsdi4 as a system, that supports esddsp.
	INADDR_LOOPBACK - u_long changed to u_int32_t.

1999-07-11  Raja R Harinath  <harinath@cs.umn.edu>

	* acconfig.h (SUN_LEN): Add @BOTTOM@ section and move this
	definition there.

	* configure.in (setenv, putenv): Add checks.
	* esdplay.c (main): Use `putenv' as a fallback if `setenv' isn't
	available. 
	Reported by "Brandon S. Allbery" <allbery@ece.cmu.edu>.
	
1999-06-30 Scott Heavner  <sdh@po.cwru.edu>

	* configure.in, acconfig.h: Change SUN_LEN test to use AC_TRY_LINK.
	Then change it more.  Are #ifdef's allowed in acconfig.h?  Seems
	like cheating, but it works here (autoconf v2.13).  The previous
	incarnation was using AC_DEFINE to setup a macro and wasn't
	working at all.

Mon Jun 28 18:34:10 1999 Timur Bakeyev <mc@bat.ru>

	* acconfig.h, configure.in: Fix checkes against INADDR_LOOPBACK
	and SUN_LEN.