@@ -1,3 +1,8 @@
+1999-10-11  Drazen Kacar  <dave@srce.hr>
+
+	* audio_solaris.c: Don't spit warnings if /dev/audio doesn't
+	exist. User probably knows he doesn't have a sound card.
+
 1999-10-06  Russell Steinthal  <rms39@columbia.edu>
 
 	* esdlib.c (esd_connect_tcpip): Fix case in which user specifies
